0.9.0: (Future)
Features:
 - e-Reader card scanning
 - Add APNG recording
Emulation fixes:
 - ARM: Fix ALU reading PC after shifting
 - ARM: Fix STR storing PC after address calculation
 - GBA BIOS: Implement dummy sound driver calls
 - GBA BIOS: Improve HLE BIOS timing
 - GBA DMA: Linger last DMA on bus (fixes mgba.io/i/301 and mgba.io/i/1320)
 - GBA Memory: Improve gamepak prefetch timing
 - GBA SIO: Fix Multiplayer busy bit
 - GBA SIO: Fix double-unloading active driver
 - GBA SIO: Fix copying Normal mode transfer values
 - GBA Timers: Fix deserializing count-up timers
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
Other fixes:
 - Core: Ensure ELF regions can be written before trying
 - Core: Fix ELF loading regression (fixes mgba.io/i/1669)
 - Core: Fix crash modifying hash table entry (fixes mgba.io/i/1673)
 - GB Video: Fix some cases where SGB border doesn't draw to mutli-buffers
 - GBA: Reject incorrectly sized BIOSes
 - Debugger: Don't skip undefined instructions when debugger attached
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix OpenGL 2.1 support (fixes mgba.io/i/1678)
Misc:
 - FFmpeg: Add looping option for GIF/APNG
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Disable Replace ROM option when no game loaded
 - Qt: Defer texture updates until frame is drawn (fixes mgba.io/i/1590)
 - Qt: Set icon for Discord Rich Presence

0.8.1: (2020-02-16)
Emulation fixes:
 - GB Serialize: Fix timing bug loading channel 4 timing
 - GBA: Fix multiboot entry point while skipping BIOS
 - GBA BIOS: Fix undefined instruction HLE behavior
 - GBA DMA: Fix invalid audio DMA parameters
 - GBA Memory: Misaligned SRAM writes are ignored
 - GBA Serialize: Fix serializing DMA transfer register
 - GBA Serialize: Fix audio DMA timing deserialization